11/19/12 reuse meter image from faraday java
11/19/12 move debug logging into model objects
11/19/12 add drag handlers to compass and field meter
11/19/12 create stubs for all model object types
11/19/12 move mvt creation to model
11/19/12 rename FaradayView -> FaradayStage, cleanup
11/19/12 create type stubs for all top-level display objects
11/19/12 wire up control panel to view properties and stub display objects
11/19/12 wire up control panel stubs
11/19/12 encapsulate control panel stuff in its own type
11/18/12 wire up event handler for 1 check box
11/18/12 add all controls except strength slider to HTML
11/18/12 put control panel to right of stage
11/18/12 wire up Reset All button
11/18/12 implement Property.reset
11/18/12 add "Flip Polarity" button in HTML, wire up to model
11/18/12 better interface for DragHandler
11/18/12 rotate bar magnet display object to match orientation of model
11/18/12 scale bar magnet display object to match dimensions of model
11/18/12 add size and orientation to bar magnet model
11/18/12 remove unnecessary call to stage.update
11/18/12 use one logger instance per source file, similar to java.util.logging
11/18/12 wrapper for static logging
11/18/12 add scaling to model-view-transform
11/18/12 add model-view-transform (scaling currently ignored)
11/18/12 complete synchronization of bar magnet model and view
11/18/12 derive a generalized drag handler from SR's easel-util, delete copy of easel-util
11/18/12 replace Point2D with Easel.Point
11/18/12 immutable Point2D
11/18/12 delete unused variants of bar magnet display object, use "combination inheritance" version
11/18/12 wire up bar magnet model to view
11/18/12 refine Property.js
11/16/12 first wag at implementing observable properties
11/16/12 first wag at bar magnet model element
11/16/12 try another pattern ("Parasitic Combination Inheritance") for the bar magnet display object
11/16/12 delete Easel text